--- a/mapfo/android/app/build.gradle
+++ b/mapfo/android/app/build.gradle
@@ -38,6 +38,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+        multiDexEnabled true
         applicationId "com.example.mapfo"
         minSdkVersion 16
         targetSdkVersion 28
@@ -60,6 +61,7 @@ flutter {
 }
 
 dependencies {
+    compile 'com.android.support:multidex:1.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
