--- a/mapfo/pubspec.yaml
+++ b/mapfo/pubspec.yaml
@@ -21,3 +21,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+
+  fonts:
+    - family: RedHatDisplay
+      fonts:
+        - asset: fonts/RedHatDisplay-Regular.ttf
